@@ -1,6 +1,12 @@
 ﻿Version [Version Number] ([Friendly Version Number]) [Release Date]
 
 
+Version vNext
+
+	Bug fixes:
+		[Core] Improved the exception messages in case unregistered delegates are resolved. (work item 20980)
+
+
 Version 2.6.0 (v2.6.0 RTM) 2014-10-14
 
 	New features:
